<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fractal"
    android:orientation="vertical"
    tools:context=".MainActivity">
    >

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:background="@color/teal_200"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="21pt"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5pt"
        android:layout_marginTop="3pt"
        android:layout_marginRight="5pt"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/etNum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:backgroundTint="@color/purple_2"

            android:textColor="@color/purple_2"
            android:textSize="13pt">

        </EditText>

        <EditText
            android:id="@+id/etNum2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:backgroundTint="@color/purple_2"
            android:textColor="@color/purple_2"
            android:textSize="13pt">

        </EditText>
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:layout_marginBottom="8dp"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvResult"

        app:layout_constraintStart_toStartOf="@+id/tvResult">


        <Button
            android:id="@+id/btnPercent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            android:backgroundTint="@color/purple_500"
            android:text="@string/percent"
            android:textSize="8pt" />

        <Button
            android:id="@+id/btnClearAll"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            android:backgroundTint="@color/purple_500"
            android:text="@string/clear_all"
            android:textSize="8pt" />

        <Button
            android:id="@+id/btnClearPart"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/purple_500"
            android:textSize="8pt"
            app:icon="@android:drawable/ic_input_delete"
            app:iconGravity="textStart"
            app:iconSize="10pt" />

        <Button
            android:id="@+id/btnDiv"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/div"
            android:textSize="8pt" />

        <Button


            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue_1"
            android:text="@string/_1"
            android:textSize="8pt" />

        <Button


            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue_1"
            android:text="@string/_2"
            android:textSize="8pt" />

        <Button

            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue_1"
            android:text="@string/_3"

            android:textSize="8pt" />

        <Button
            android:id="@+id/btnMult"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/mult"
            android:textSize="8pt" />

        <Button


            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue_1"
            android:text="@string/_4"
            android:textSize="8pt" />

        <Button


            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue_1"
            android:text="@string/_5"
            android:textSize="8pt" />

        <Button


            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue_1"
            android:text="@string/_6"
            android:textSize="8pt" />

        <Button
            android:id="@+id/btnSub"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            android:backgroundTint="@color/purple_500"
            android:text="@string/sub"
            android:textSize="8pt" />

        <Button
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            android:backgroundTint="@color/blue_1"
            android:text="@string/_7"
            android:textSize="8pt" />

        <Button
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue_1"
            android:text="@string/_8"
            android:textSize="8pt" />

        <Button
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            android:backgroundTint="@color/blue_1"
            android:text="@string/_9"
            android:textSize="8pt" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            android:backgroundTint="@color/purple_500"
            android:text="@string/add"
            android:textSize="8pt" />

        <Button
            android:id="@+id/btnNegative"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            android:backgroundTint="@color/blue_2"
            android:text="@string/negative"
            android:textSize="8pt" />

        <Button
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            android:backgroundTint="@color/blue_1"
            android:text="@string/_0"
            android:textSize="8pt" />

        <Button
            android:id="@+id/btnComma"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/blue_2"
            android:text="@string/comma"
            android:textSize="8pt" />


        <Button
            android:id="@+id/btnEqual"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/green"
            android:text="@string/equal"
            android:textSize="8pt" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>